packages/typ/tests/fixtures/diagnostics/0601_functor_abstract_value_as_bool_06.ml.expected
File "0601_functor_abstract_value_as_bool_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0601_functor_abstract_value_as_bool_06 is not a valid module name.

File "0601_functor_abstract_value_as_bool_06.ml", line 7, characters 17-20:
7 |   let y : bool = X.x
                     ^^^
Error: The value X.x has type X.t but an expression was expected of type bool
