packages/typ/tests/fixtures/diagnostics/0601_functor_abstract_value_as_bool_06.ml
module type Arg_zeta = sig
  type t
  val x : t
end

module Make_zeta (X : Arg_zeta) = struct
  let y : bool = X.x
end
